--- a/test.html
+++ b/test.html
@@ -7,26 +7,51 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <style>
     body { margin: 0; overflow: hidden; }
-    canvas { position: absolute; top: 0; left: 0; }
-    #maskCanvas { pointer-events: none; z-index: 10; }
-    #info { position: absolute; bottom: 10px; left: 10px; color: white; background: rgba(0,0,0,0.5); padding: 6px; font-family: monospace; font-size: 12px; z-index: 20; }
-    #startBtn { position: absolute; top: 10px; left: 10px; z-index: 15; padding: 10px; background: rgba(0,0,0,0.7); color: white; border: none; border-radius: 5px; cursor: pointer; }
+    #maskCanvas {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 10;
+      pointer-events: none;
+    }
+    #info {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      color: white;
+      background: rgba(0,0,0,0.5);
+      padding: 6px;
+      font-family: monospace;
+      font-size: 12px;
+      z-index: 20;
+    }
+    #startBtn {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 15;
+      padding: 10px;
+      background: rgba(0,0,0,0.7);
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <button id="startBtn">Start AR Segmentation</button>
-  <canvas id="cameraCanvas" width="224" height="224"></canvas>
   <canvas id="maskCanvas" width="224" height="224"></canvas>
   <div id="info">Status: idle</div>
 
   <script>
     let model;
     let gl, session, glBinding, renderer;
-    let cameraCanvas = document.getElementById('cameraCanvas');
-    let maskCanvas = document.getElementById('maskCanvas');
-    let cameraCtx = cameraCanvas.getContext('2d');
-    let maskCtx = maskCanvas.getContext('2d');
-
+    const maskCanvas = document.getElementById('maskCanvas');
+    const maskCtx = maskCanvas.getContext('2d');
+    const tempCanvas = document.createElement('canvas');
+    const tempCtx = tempCanvas.getContext('2d');
     let processing = false;
 
     async function loadModel() {
@@ -68,23 +93,25 @@
 
         const tempFB = gl.createFramebuffer();
         gl.bindFramebuffer(gl.FRAMEBUFFER, tempFB);
-
         gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, cameraTexture, 0);
 
         const pixels = new Uint8Array(width * height * 4);
         gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
 
         const imageData = new ImageData(new Uint8ClampedArray(pixels), width, height);
-        const tempCanvas = document.createElement('canvas');
         tempCanvas.width = width;
         tempCanvas.height = height;
-        const tempCtx = tempCanvas.getContext('2d');
         tempCtx.putImageData(imageData, 0, 0);
 
-        cameraCtx.drawImage(tempCanvas, 0, 0, 224, 224);
-        const input = tf.browser.fromPixels(cameraCanvas, 3).div(255).expandDims();
-
         processing = true;
+
+        const input = tf.tidy(() => {
+          return tf.browser.fromPixels(tempCanvas, 3)
+            .resizeBilinear([224, 224])
+            .div(255)
+            .expandDims();
+        });
+
         model.predict(input).data().then(pred => {
           const maskImageData = maskCtx.createImageData(224, 224);
           for (let i = 0; i < 224 * 224; i++) {
@@ -94,11 +121,14 @@
             maskImageData.data[i * 4 + 2] = val;
             maskImageData.data[i * 4 + 3] = val;
           }
+          maskCanvas.width = window.innerWidth;
+          maskCanvas.height = window.innerHeight;
           maskCtx.putImageData(maskImageData, 0, 0);
           tf.dispose(input);
           processing = false;
         }).catch(e => {
           log("Error: " + e.message);
+          tf.dispose(input);
           processing = false;
         });
       };
