--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
       height: 100vh;
       z-index: 10;
       pointer-events: none;
+      transform: rotate(180deg);
     }
     #info {
       position: absolute;
@@ -42,7 +43,7 @@
 </head>
 <body>
   <button id="startBtn">Start AR Segmentation</button>
-  <canvas id="maskCanvas" width="224" height="224"></canvas>
+  <canvas id="maskCanvas"></canvas>
   <div id="info">Status: idle</div>
 
   <script>
@@ -123,6 +124,7 @@
           }
           maskCanvas.width = window.innerWidth;
           maskCanvas.height = window.innerHeight;
+          maskCtx.clearRect(0, 0, maskCanvas.width, maskCanvas.height);
           maskCtx.putImageData(maskImageData, 0, 0);
           tf.dispose(input);
           processing = false;
