--- a/test.html
+++ b/test.html
@@ -8,13 +8,13 @@
   <style>
     body { margin: 0; overflow: hidden; }
     #maskCanvas {
-      position: absolute;
+      position: fixed;
       top: 0; left: 0;
       width: 100vw;
       height: 100vh;
       z-index: 10;
       pointer-events: none;
-      transform: rotate(180deg);
+      transform: rotate(180deg) scaleX(-1);
     }
     #info {
       position: absolute;
