--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Real-time Segmentation (Fast Optimized)</title>
+  <title>AR Real-time Segmentation (Optimized Input)</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <style>
     body { margin: 0; overflow: hidden; }
@@ -97,28 +97,25 @@
         const cameraTexture = glBinding.getCameraImage(view.camera);
         if (!cameraTexture) return;
 
-        const width = view.camera.width;
-        const height = view.camera.height;
-
         const fb = gl.createFramebuffer();
         gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
         gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, cameraTexture, 0);
 
+        const width = 224;
+        const height = 224;
         const pixels = new Uint8Array(width * height * 4);
         gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
 
         processingLock.busy = true;
-
         const t0 = performance.now();
+
         tf.nextFrame().then(() => {
           const t1 = performance.now();
 
           const input = tf.tidy(() => {
-            return tf.tensor(pixels, [height, width, 4], 'int32')
-              .slice([0, 0, 0], [-1, -1, 3])
-              .resizeBilinear([224, 224])
-              .div(255)
-              .expandDims();
+            const rgba = tf.tensor(pixels, [height, width, 4], 'int32');
+            const rgb = rgba.slice([0, 0, 0], [-1, -1, 3]);
+            return rgb.div(255.0).expandDims();
           });
 
           const t2 = performance.now();
